<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/ic_rectangle_58"
        android:theme="@style/Theme.AppCompat.NoActionBar"
        tools:context=".MainActivity">

        <View
            android:id="@+id/back"
            android:layout_width="7dp"
            android:layout_height="14dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="63dp"
            android:background="@drawable/ic_vector_16"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/mycardsTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="144dp"
            android:layout_marginRight="143dp"
            android:layout_marginTop="59dp"
            android:gravity="center"
            android:lineSpacingExtra="2sp"
            android:text="@string/my_cards_text"
            android:textAppearance="@style/personal_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/maincardTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="39dp"
            android:layout_marginLeft="25dp"
            android:text="@string/main_card_text"
            android:textAppearance="@style/main_card"
            app:layout_constraintTop_toBottomOf="@+id/mycardsTv"
            app:layout_constraintLeft_toLeftOf="parent" />

        <View
            android:id="@+id/rectangle_82"
            android:layout_width="325dp"
            android:layout_height="103dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/ic_rectangle_82"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/maincardTv" />

        <View
            android:id="@+id/ellipse"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="49dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="57dp"
            app:layout_constraintTop_toBottomOf="@+id/maincardTv"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/ic_ellipse_34" />

        <View
            android:id="@+id/mastercard"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="49dp"
            android:layout_marginTop="57dp"
            app:layout_constraintTop_toBottomOf="@+id/maincardTv"
            app:layout_constraintLeft_toLeftOf="parent"
            android:background="@drawable/ic_ic_mastercard_white" />

        <TextView
            android:id="@+id/cardnumbersTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:layout_marginLeft="105dp"
            android:text="@string/card_numbers_text"
            android:textAppearance="@style/card_numbers"
            app:layout_constraintTop_toBottomOf="@+id/maincardTv"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/mastercardTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="82dp"
            android:layout_marginLeft="105dp"
            android:text="@string/master_card_text"
            android:textAppearance="@style/master_card"
            app:layout_constraintTop_toBottomOf="@+id/maincardTv"
            app:layout_constraintLeft_toLeftOf="parent" />

        <View
            android:id="@+id/ellipse2"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginRight="49dp"
            android:layout_marginTop="65dp"
            app:layout_constraintTop_toBottomOf="@+id/maincardTv"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/ic_ellipse_35"
            />

        <View
            android:id="@+id/vector2"
            android:layout_width="10dp"
            android:layout_height="7dp"
            android:layout_marginRight="56dp"
            android:layout_marginTop="74dp"
            app:layout_constraintTop_toBottomOf="@+id/maincardTv"
            app:layout_constraintRight_toRightOf="parent"
            android:background="@drawable/ic_vector_28"
            />

        <TextView
            android:id="@+id/choiceTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="247dp"
            android:layout_marginLeft="25dp"
            android:text="@string/choice_text"
            android:textAppearance="@style/main_card"
            app:layout_constraintTop_toBottomOf="@+id/mycardsTv"
            app:layout_constraintLeft_toLeftOf="parent" />

        <Button
            android:id="@+id/addBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/shape_add_bck"
            android:padding="12dp"
            android:text="@string/add_text"
            android:textAppearance="@style/add_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/choiceTv"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/cloudpaymentsTv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:gravity="center"
            android:text="@string/cloud_payments_text"
            android:textAppearance="@style/about_card"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addBtn" />

        <View
            android:id="@+id/rectangle"
            android:layout_width="134dp"
            android:layout_height="5dp"
            android:layout_marginLeft="121dp"
            android:layout_marginRight="121dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/ic_rectangle"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cloudpaymentsTv"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>